tests/core/error/fts-snippet-8.rq
SELECT (fts:snippet(?u, '>', '<', '...', 2, 1) AS ?snippet) { ?u fts:match "a" }
